@@ -25,7 +25,6 @@
 
 package sun.management;
 
-import java.lang.reflect.Method;
 import java.lang.reflect.Field;
 import java.lang.management.ManagementPermission;
 import java.lang.management.ThreadInfo;
@@ -89,36 +88,12 @@ public class Util {
     }
 
     /**
-     * Returns true if the given Thread is a virtual thread.
-     *
-     * @implNote This method uses reflection because Thread::isVirtual is a preview API
-     * and the java.management module cannot be compiled with --enable-preview.
-     */
-    public static boolean isVirtual(Thread thread) {
-        try {
-            return (boolean) THREAD_IS_VIRTUAL.invoke(thread);
-        } catch (Exception e) {
-            throw new InternalError(e);
-        }
-    }
-
-    /**
      * Returns true if the given ThreadInfo is for a virtual thread.
      */
     public static boolean isVirtual(ThreadInfo threadInfo) {
         try {
             return (boolean) THREADINFO_VIRTUAL.get(threadInfo);
         } catch (Exception e) {
-            throw new InternalError(e);
-        }
-    }
-
-    @SuppressWarnings("removal")
-    private static Method threadIsVirtual() {
-        PrivilegedExceptionAction<Method> pa = () -> Thread.class.getMethod("isVirtual");
-        try {
-            return AccessController.doPrivileged(pa);
-        } catch (PrivilegedActionException e) {
             throw new InternalError(e);
         }
     }
@@ -137,6 +112,5 @@ public class Util {
         }
     }
 
-    private static final Method THREAD_IS_VIRTUAL = threadIsVirtual();
     private static final Field THREADINFO_VIRTUAL = threadInfoVirtual();
 }
