@@ -40,6 +40,7 @@
  */
 
 import java.lang.foreign.*;
+import java.lang.foreign.SegmentScope;
 import java.lang.foreign.VaList;
 import jdk.internal.foreign.abi.aarch64.linux.LinuxAArch64Linker;
 import jdk.internal.foreign.abi.aarch64.macos.MacOsAArch64Linker;
@@ -53,6 +54,8 @@ import java.lang.invoke.MethodHandleProxies;
 import java.lang.invoke.MethodHandles;
 import java.lang.invoke.MethodType;
 import java.lang.invoke.VarHandle;
+import java.util.List;
+import java.util.NoSuchElementException;
 import java.util.function.BiFunction;
 import java.util.function.Consumer;
 import java.util.function.Function;
@@ -60,6 +63,7 @@ import java.util.stream.DoubleStream;
 import java.util.stream.IntStream;
 
 import static java.lang.foreign.MemoryLayout.PathElement.groupElement;
+import static java.lang.foreign.ValueLayout.ADDRESS;
 import static java.lang.foreign.ValueLayout.JAVA_DOUBLE;
 import static java.lang.foreign.ValueLayout.JAVA_INT;
 import static java.lang.foreign.ValueLayout.JAVA_LONG;
@@ -73,11 +77,13 @@ public class VaListTest extends NativeTestHelper {
         System.loadLibrary("VaList");
     }
 
-    private static final MethodHandle ADDRESS_TO_VALIST;
+    private static final MethodHandle VALIST_TO_ADDRESS;
+    private static final MethodHandle SEGMENT_TO_VALIST;
 
     static {
         try {
-            ADDRESS_TO_VALIST = MethodHandles.lookup().findStatic(VaList.class, "ofAddress", MethodType.methodType(VaList.class, MemoryAddress.class, MemorySession.class));
+            VALIST_TO_ADDRESS = MethodHandles.lookup().findVirtual(VaList.class, "segment", MethodType.methodType(MemorySegment.class));
+            SEGMENT_TO_VALIST = MethodHandles.lookup().findStatic(VaListTest.class, "segmentToValist", MethodType.methodType(VaList.class, MemorySegment.class));
         } catch (Throwable ex) {
             throw new ExceptionInInitializerError(ex);
         }
@@ -106,7 +112,7 @@ public class VaListTest extends NativeTestHelper {
     }
 
     private static MethodHandle linkVaList(String symbol, FunctionDescriptor fd) {
-        return linkInternal(symbol, fd);
+        return MethodHandles.filterArguments(linkInternal(symbol, fd), fd.argumentLayouts().size() - 1, VALIST_TO_ADDRESS);
     }
 
 
@@ -121,26 +127,26 @@ public class VaListTest extends NativeTestHelper {
     }
 
     private static final Function<Consumer<VaList.Builder>, VaList> winVaListFactory
-            = actions -> Windowsx64Linker.newVaList(actions, MemorySession.openImplicit());
+            = actions -> Windowsx64Linker.newVaList(actions, SegmentScope.auto());
     private static final Function<Consumer<VaList.Builder>, VaList> sysvVaListFactory
-            = actions -> SysVx64Linker.newVaList(actions, MemorySession.openImplicit());
+            = actions -> SysVx64Linker.newVaList(actions, SegmentScope.auto());
     private static final Function<Consumer<VaList.Builder>, VaList> linuxAArch64VaListFactory
-            = actions -> LinuxAArch64Linker.newVaList(actions, MemorySession.openImplicit());
+            = actions -> LinuxAArch64Linker.newVaList(actions, SegmentScope.auto());
     private static final Function<Consumer<VaList.Builder>, VaList> macAArch64VaListFactory
-            = actions -> MacOsAArch64Linker.newVaList(actions, MemorySession.openImplicit());
+            = actions -> MacOsAArch64Linker.newVaList(actions, SegmentScope.auto());
     private static final Function<Consumer<VaList.Builder>, VaList> platformVaListFactory
-            = (builder) -> VaList.make(builder, MemorySession.openConfined());
+            = (builder) -> VaList.make(builder, SegmentScope.auto());
 
-    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> winVaListScopedFactory
-            = (builder, session) -> Windowsx64Linker.newVaList(builder, session);
-    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> sysvVaListScopedFactory
-            = (builder, session) -> SysVx64Linker.newVaList(builder, session);
-    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> linuxAArch64VaListScopedFactory
-            = (builder, session) -> LinuxAArch64Linker.newVaList(builder, session);
-    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> macAArch64VaListScopedFactory
-            = (builder, session) -> MacOsAArch64Linker.newVaList(builder, session);
-    private static final BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> platformVaListScopedFactory
-            = (builder, session) -> VaList.make(builder, session);
+    private static final BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> winVaListScopedFactory
+            = Windowsx64Linker::newVaList;
+    private static final BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> sysvVaListScopedFactory
+            = SysVx64Linker::newVaList;
+    private static final BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> linuxAArch64VaListScopedFactory
+            = LinuxAArch64Linker::newVaList;
+    private static final BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> macAArch64VaListScopedFactory
+            = MacOsAArch64Linker::newVaList;
+    private static final BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> platformVaListScopedFactory
+            = VaList::make;
 
     @DataProvider
     @SuppressWarnings("unchecked")
@@ -163,9 +169,9 @@ public class VaListTest extends NativeTestHelper {
                            BiFunction<Integer, VaList, Integer> sumInts,
                            ValueLayout.OfInt intLayout) {
         VaList vaList = vaListFactory.apply(b ->
-            b.addVarg(intLayout, 10)
-                    .addVarg(intLayout, 15)
-                    .addVarg(intLayout, 20));
+                b.addVarg(intLayout, 10)
+                        .addVarg(intLayout, 15)
+                        .addVarg(intLayout, 20));
         int x = sumInts.apply(3, vaList);
         assertEquals(x, 45);
     }
@@ -191,9 +197,9 @@ public class VaListTest extends NativeTestHelper {
                               BiFunction<Integer, VaList, Double> sumDoubles,
                               ValueLayout.OfDouble doubleLayout) {
         VaList vaList = vaListFactory.apply(b ->
-            b.addVarg(doubleLayout, 3.0D)
-                    .addVarg(doubleLayout, 4.0D)
-                    .addVarg(doubleLayout, 5.0D));
+                b.addVarg(doubleLayout, 3.0D)
+                        .addVarg(doubleLayout, 4.0D)
+                        .addVarg(doubleLayout, 5.0D));
         double x = sumDoubles.apply(3, vaList);
         assertEquals(x, 12.0D);
     }
@@ -203,7 +209,7 @@ public class VaListTest extends NativeTestHelper {
     public static Object[][] pointers() {
         Function<ValueLayout.OfAddress, Function<VaList, Integer>> getIntJavaFact = layout ->
                 list -> {
-                    MemoryAddress ma = list.nextVarg(layout);
+                    MemorySegment ma = list.nextVarg(layout);
                     return ma.get(JAVA_INT, 0);
                 };
         Function<VaList, Integer> getIntNative = MethodHandleProxies.asInterfaceInstance(Function.class, MH_getInt);
@@ -217,13 +223,13 @@ public class VaListTest extends NativeTestHelper {
     }
 
     @Test(dataProvider = "pointers")
-    public void testVaListMemoryAddress(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
+    public void testVaListMemorySegment(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
                                         Function<VaList, Integer> getFromPointer,
                                         ValueLayout.OfAddress pointerLayout) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment msInt = MemorySegment.allocateNative(JAVA_INT, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment msInt = MemorySegment.allocateNative(JAVA_INT, arena.scope());;
             msInt.set(JAVA_INT, 0, 10);
-            VaList vaList = vaListFactory.apply(b -> b.addVarg(pointerLayout, msInt.address()));
+            VaList vaList = vaListFactory.apply(b -> b.addVarg(pointerLayout, msInt));
             int x = getFromPointer.apply(vaList);
             assertEquals(x, 10);
         }
@@ -239,7 +245,7 @@ public class VaListTest extends NativeTestHelper {
         TriFunction<GroupLayout, VarHandle, VarHandle, Function<VaList, Integer>> sumStructJavaFact
                 = (pointLayout, VH_Point_x, VH_Point_y) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(pointLayout, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(pointLayout, SegmentScope.auto());
                     list.nextVarg(pointLayout, SegmentAllocator.prefixAllocator(struct));
                     int x = (int) VH_Point_x.get(struct);
                     int y = (int) VH_Point_y.get(struct);
@@ -275,8 +281,8 @@ public class VaListTest extends NativeTestHelper {
     public void testStruct(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
                            Function<VaList, Integer> sumStruct,
                            GroupLayout Point_LAYOUT, VarHandle VH_Point_x, VarHandle VH_Point_y) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, arena.scope());;
             VH_Point_x.set(struct, 5);
             VH_Point_y.set(struct, 10);
 
@@ -292,7 +298,7 @@ public class VaListTest extends NativeTestHelper {
         TriFunction<GroupLayout, VarHandle, VarHandle, Function<VaList, Long>> sumStructJavaFact
                 = (BigPoint_LAYOUT, VH_BigPoint_x, VH_BigPoint_y) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, SegmentScope.auto());
                     list.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     long x = (long) VH_BigPoint_x.get(struct);
                     long y = (long) VH_BigPoint_y.get(struct);
@@ -328,8 +334,8 @@ public class VaListTest extends NativeTestHelper {
     public void testBigStruct(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
                               Function<VaList, Long> sumBigStruct,
                               GroupLayout BigPoint_LAYOUT, VarHandle VH_BigPoint_x, VarHandle VH_BigPoint_y) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, arena.scope());;
             VH_BigPoint_x.set(struct, 5);
             VH_BigPoint_y.set(struct, 10);
 
@@ -345,7 +351,7 @@ public class VaListTest extends NativeTestHelper {
         TriFunction<GroupLayout, VarHandle, VarHandle, Function<VaList, Float>> sumStructJavaFact
                 = (FloatPoint_LAYOUT, VH_FloatPoint_x, VH_FloatPoint_y) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, SegmentScope.auto());
                     list.nextVarg(FloatPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     float x = (float) VH_FloatPoint_x.get(struct);
                     float y = (float) VH_FloatPoint_y.get(struct);
@@ -382,8 +388,8 @@ public class VaListTest extends NativeTestHelper {
                                 Function<VaList, Float> sumFloatStruct,
                                 GroupLayout FloatPoint_LAYOUT,
                                 VarHandle VH_FloatPoint_x, VarHandle VH_FloatPoint_y) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, arena.scope());;
             VH_FloatPoint_x.set(struct, 1.234f);
             VH_FloatPoint_y.set(struct, 3.142f);
 
@@ -403,7 +409,7 @@ public class VaListTest extends NativeTestHelper {
         QuadFunc<GroupLayout, VarHandle, VarHandle, VarHandle, Function<VaList, Long>> sumStructJavaFact
                 = (HugePoint_LAYOUT, VH_HugePoint_x, VH_HugePoint_y, VH_HugePoint_z) ->
                 list -> {
-                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, SegmentScope.auto());
                     list.nextVarg(HugePoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     long x = (long) VH_HugePoint_x.get(struct);
                     long y = (long) VH_HugePoint_y.get(struct);
@@ -446,8 +452,8 @@ public class VaListTest extends NativeTestHelper {
                                VarHandle VH_HugePoint_x, VarHandle VH_HugePoint_y, VarHandle VH_HugePoint_z) {
         // On AArch64 a struct needs to be larger than 16 bytes to be
         // passed by reference.
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, arena.scope());;
             VH_HugePoint_x.set(struct, 1);
             VH_HugePoint_y.set(struct, 2);
             VH_HugePoint_z.set(struct, 3);
@@ -479,7 +485,7 @@ public class VaListTest extends NativeTestHelper {
                 };
         SumStackFunc sumStackNative = (longSum, doubleSum, list) -> {
             try {
-                MH_sumStack.invoke(longSum, doubleSum, list);
+                MH_sumStack.invokeExact(longSum, doubleSum, list);
             } catch (Throwable ex) {
                 throw new AssertionError(ex);
             }
@@ -498,9 +504,9 @@ public class VaListTest extends NativeTestHelper {
                           SumStackFunc sumStack,
                           ValueLayout.OfLong longLayout,
                           ValueLayout.OfDouble doubleLayout) {
-        try (MemorySession session = MemorySession.openConfined()) {
-            MemorySegment longSum = MemorySegment.allocateNative(longLayout, session);
-            MemorySegment doubleSum = MemorySegment.allocateNative(doubleLayout, session);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment longSum = MemorySegment.allocateNative(longLayout, arena.scope());;
+            MemorySegment doubleSum = MemorySegment.allocateNative(doubleLayout, arena.scope());;
             longSum.set(JAVA_LONG, 0, 0L);
             doubleSum.set(JAVA_DOUBLE, 0, 0D);
 
@@ -526,9 +532,9 @@ public class VaListTest extends NativeTestHelper {
     @Test(dataProvider = "upcalls")
     public void testUpcall(MethodHandle target, MethodHandle callback) throws Throwable {
         FunctionDescriptor desc = FunctionDescriptor.ofVoid(C_POINTER);
-        try (MemorySession session = MemorySession.openConfined()) {
-            Addressable stub = abi.upcallStub(callback, desc, session);
-            target.invoke(stub);
+        try (Arena arena = Arena.openConfined()) {
+            MemorySegment stub = abi.upcallStub(callback, desc, arena.scope());
+            target.invokeExact(stub);
         }
     }
 
@@ -563,18 +569,18 @@ public class VaListTest extends NativeTestHelper {
     }
 
     @Test(dataProvider = "sumIntsScoped")
-    public void testScopedVaList(BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> vaListFactory,
+    public void testScopedVaList(BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> vaListFactory,
                                  BiFunction<Integer, VaList, Integer> sumInts,
                                  ValueLayout.OfInt intLayout) {
         VaList listLeaked;
-        try (MemorySession session = MemorySession.openConfined()) {
+        try (Arena arena = Arena.openConfined()) {
             VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
-                            .addVarg(intLayout, 8), session);
+                    .addVarg(intLayout, 8), arena.scope());
             int x = sumInts.apply(2, list);
             assertEquals(x, 12);
             listLeaked = list;
         }
-        assertFalse(listLeaked.session().isAlive());
+        assertFalse(listLeaked.segment().scope().isAlive());
     }
 
     @Test(dataProvider = "structs")
@@ -582,21 +588,21 @@ public class VaListTest extends NativeTestHelper {
                                 Function<VaList, Integer> sumStruct, // ignored
                                 GroupLayout Point_LAYOUT, VarHandle VH_Point_x, VarHandle VH_Point_y) {
         MemorySegment pointOut;
-        try (MemorySession session = MemorySession.openConfined()) {
-            try (MemorySession innerSession = MemorySession.openConfined()) {
-                MemorySegment pointIn = MemorySegment.allocateNative(Point_LAYOUT, innerSession);
+        try (Arena arena = Arena.openConfined()) {
+            try (Arena innerArena = Arena.openConfined()) {
+                MemorySegment pointIn = MemorySegment.allocateNative(Point_LAYOUT, innerArena.scope());;
                 VH_Point_x.set(pointIn, 3);
                 VH_Point_y.set(pointIn, 6);
                 VaList list = vaListFactory.apply(b -> b.addVarg(Point_LAYOUT, pointIn));
-                pointOut = MemorySegment.allocateNative(Point_LAYOUT, session);
+                pointOut = MemorySegment.allocateNative(Point_LAYOUT, arena.scope());;
                 list.nextVarg(Point_LAYOUT, SegmentAllocator.prefixAllocator(pointOut));
                 assertEquals((int) VH_Point_x.get(pointOut), 3);
                 assertEquals((int) VH_Point_y.get(pointOut), 6);
-                assertTrue(pointOut.session().isAlive()); // after VaList freed
+                assertTrue(pointOut.scope().isAlive()); // after VaList freed
             }
-            assertTrue(pointOut.session().isAlive()); // after inner session freed
+            assertTrue(pointOut.scope().isAlive()); // after inner session freed
         }
-        assertFalse(pointOut.session().isAlive()); // after outer session freed
+        assertFalse(pointOut.scope().isAlive()); // after outer session freed
     }
 
     @DataProvider
@@ -610,10 +616,10 @@ public class VaListTest extends NativeTestHelper {
     }
 
     @Test(dataProvider = "copy")
-    public void testCopy(BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> vaListFactory, ValueLayout.OfInt intLayout) {
-        try (var session = MemorySession.openConfined()) {
+    public void testCopy(BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> vaListFactory, ValueLayout.OfInt intLayout) {
+        try (var arena = Arena.openConfined()) {
             VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
-                    .addVarg(intLayout, 8), session);
+                    .addVarg(intLayout, 8), arena.scope());
             VaList copy = list.copy();
             assertEquals(copy.nextVarg(intLayout), 4);
             assertEquals(copy.nextVarg(intLayout), 8);
@@ -632,12 +638,12 @@ public class VaListTest extends NativeTestHelper {
 
     @Test(dataProvider = "copy",
             expectedExceptions = IllegalStateException.class)
-    public void testCopyUnusableAfterOriginalClosed(BiFunction<Consumer<VaList.Builder>, MemorySession, VaList> vaListFactory,
+    public void testCopyUnusableAfterOriginalClosed(BiFunction<Consumer<VaList.Builder>, SegmentScope, VaList> vaListFactory,
                                                     ValueLayout.OfInt intLayout) {
         VaList copy;
-        try (var session = MemorySession.openConfined()) {
+        try (var arena = Arena.openConfined()) {
             VaList list = vaListFactory.apply(b -> b.addVarg(intLayout, 4)
-                    .addVarg(intLayout, 8), session);
+                    .addVarg(intLayout, 8), arena.scope());
             copy = list.copy();
         }
 
@@ -675,14 +681,14 @@ public class VaListTest extends NativeTestHelper {
 
         return new Object[][]{
                 { linkVaListCB("upcallBigStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, SegmentScope.auto());
                     vaList.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_BigPoint_x.get(struct), 8);
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
                 })},
                 { linkVaListCB("upcallBigStruct"), VaListConsumer.mh(vaList -> {
                     VaList copy = vaList.copy();
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct =  MemorySegment.allocateNative(BigPoint_LAYOUT, SegmentScope.auto());
                     vaList.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_BigPoint_x.get(struct), 8);
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
@@ -696,7 +702,7 @@ public class VaListTest extends NativeTestHelper {
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
                 })},
                 { linkVaListCB("upcallBigStructPlusScalar"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(BigPoint_LAYOUT, SegmentScope.auto());
                     vaList.nextVarg(BigPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_BigPoint_x.get(struct), 8);
                     assertEquals((long) VH_BigPoint_y.get(struct), 16);
@@ -708,28 +714,27 @@ public class VaListTest extends NativeTestHelper {
                     assertEquals(vaList.nextVarg(C_LONG_LONG), 42);
                 })},
                 { linkVaListCB("upcallStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(Point_LAYOUT, SegmentScope.auto());
                     vaList.nextVarg(Point_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((int) VH_Point_x.get(struct), 5);
                     assertEquals((int) VH_Point_y.get(struct), 10);
                 })},
                 { linkVaListCB("upcallHugeStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(HugePoint_LAYOUT, SegmentScope.auto());
                     vaList.nextVarg(HugePoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((long) VH_HugePoint_x.get(struct), 1);
                     assertEquals((long) VH_HugePoint_y.get(struct), 2);
                     assertEquals((long) VH_HugePoint_z.get(struct), 3);
                 })},
                 { linkVaListCB("upcallFloatStruct"), VaListConsumer.mh(vaList -> {
-                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment struct = MemorySegment.allocateNative(FloatPoint_LAYOUT, SegmentScope.auto());
                     vaList.nextVarg(FloatPoint_LAYOUT, SegmentAllocator.prefixAllocator(struct));
                     assertEquals((float) VH_FloatPoint_x.get(struct), 1.0f);
                     assertEquals((float) VH_FloatPoint_y.get(struct), 2.0f);
                 })},
                 { linkVaListCB("upcallMemoryAddress"), VaListConsumer.mh(vaList -> {
-                    MemoryAddress intPtr = vaList.nextVarg(C_POINTER);
-                    MemorySegment ms = MemorySegment.ofAddress(intPtr, C_INT.byteSize(), MemorySession.global());
-                    int x = ms.get(JAVA_INT, 0);
+                    MemorySegment intPtr = vaList.nextVarg(C_POINTER);
+                    int x = intPtr.get(JAVA_INT, 0);
                     assertEquals(x, 10);
                 })},
                 { linkVaListCB("upcallDoubles"), VaListConsumer.mh(vaList -> {
@@ -767,7 +772,7 @@ public class VaListTest extends NativeTestHelper {
                     assertEquals((float) vaList.nextVarg(C_DOUBLE), 13.0F);
                     assertEquals(vaList.nextVarg(C_DOUBLE), 14.0D);
 
-                    MemorySegment buffer = MemorySegment.allocateNative(BigPoint_LAYOUT, MemorySession.openImplicit());
+                    MemorySegment buffer = MemorySegment.allocateNative(BigPoint_LAYOUT, SegmentScope.auto());
                     SegmentAllocator bufferAllocator = SegmentAllocator.prefixAllocator(buffer);
 
                     MemorySegment point = vaList.nextVarg(Point_LAYOUT, bufferAllocator);
@@ -809,10 +814,97 @@ public class VaListTest extends NativeTestHelper {
                 MethodHandle handle = MethodHandles.lookup().findVirtual(VaListConsumer.class, "accept",
                         MethodType.methodType(void.class, VaList.class)).bindTo(instance);
                 return MethodHandles.filterArguments(handle, 0,
-                        MethodHandles.insertArguments(ADDRESS_TO_VALIST, 1, MemorySession.openConfined()));
+                        SEGMENT_TO_VALIST);
             } catch (ReflectiveOperationException e) {
                 throw new InternalError(e);
             }
         }
     }
+
+    static VaList segmentToValist(MemorySegment segment) {
+        return VaList.ofAddress(segment.address(), SegmentScope.auto());
+    }
+
+    @DataProvider
+    public static Object[][] overflow() {
+        List<Function<Consumer<VaList.Builder>, VaList>> factories = List.of(
+            winVaListFactory,
+            sysvVaListFactory,
+            linuxAArch64VaListFactory,
+            macAArch64VaListFactory
+        );
+        List<List<MemoryLayout>> contentsCases = List.of(
+            List.of(JAVA_INT),
+            List.of(JAVA_LONG),
+            List.of(JAVA_DOUBLE),
+            List.of(ADDRESS),
+            List.of(JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG,
+                    JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG, JAVA_LONG,
+                    JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE,
+                    JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE, JAVA_DOUBLE,
+                    JAVA_INT, JAVA_LONG, JAVA_DOUBLE, ADDRESS)
+        );
+        List<MemoryLayout> overflowCases = List.of(
+            JAVA_INT,
+            JAVA_LONG,
+            JAVA_DOUBLE,
+            ADDRESS
+        );
+        return factories.stream()
+                .<Object[]>mapMulti((factory, sink) -> {
+                    for (List<MemoryLayout> content : contentsCases) {
+                        for (MemoryLayout overflow : overflowCases) {
+                            sink.accept(new Object[]{ factory, content, overflow });
+                        }
+                    }
+                })
+                .toArray(Object[][]::new);
+    }
+
+    private static void buildVaList(VaList.Builder builder, List<MemoryLayout> contents) {
+        for (MemoryLayout layout : contents) {
+            if (layout instanceof ValueLayout.OfInt ofInt) {
+                 builder.addVarg(ofInt, 1);
+            } else if (layout instanceof ValueLayout.OfLong ofLong) {
+                 builder.addVarg(ofLong, 1L);
+            } else if (layout instanceof ValueLayout.OfDouble ofDouble) {
+                 builder.addVarg(ofDouble, 1D);
+            } else if (layout instanceof ValueLayout.OfAddress ofAddress) {
+                 builder.addVarg(ofAddress, MemorySegment.ofAddress(1));
+            }
+        }
+    }
+
+    @Test(dataProvider = "overflow")
+    public void testSkipOverflow(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
+                                 List<MemoryLayout> contents,
+                                 MemoryLayout skipped) {
+        VaList vaList = vaListFactory.apply(b -> buildVaList(b, contents));
+        vaList.skip(contents.toArray(MemoryLayout[]::new));
+        assertThrows(NoSuchElementException.class, () -> vaList.skip(skipped));
+    }
+
+    private static void nextVarg(VaList vaList, MemoryLayout layout) {
+        if (layout instanceof ValueLayout.OfInt ofInt) {
+            assertEquals(vaList.nextVarg(ofInt), 1);
+        } else if (layout instanceof ValueLayout.OfLong ofLong) {
+            assertEquals(vaList.nextVarg(ofLong), 1L);
+        } else if (layout instanceof ValueLayout.OfDouble ofDouble) {
+            assertEquals(vaList.nextVarg(ofDouble), 1D);
+        } else if (layout instanceof ValueLayout.OfAddress ofAddress) {
+            assertEquals(vaList.nextVarg(ofAddress), MemorySegment.ofAddress(1));
+        }
+    }
+
+    @Test(dataProvider = "overflow")
+    public void testVargOverflow(Function<Consumer<VaList.Builder>, VaList> vaListFactory,
+                                 List<MemoryLayout> contents,
+                                 MemoryLayout next) {
+        VaList vaList = vaListFactory.apply(b -> buildVaList(b, contents));
+        for (MemoryLayout layout : contents) {
+            nextVarg(vaList, layout);
+        }
+        assertThrows(NoSuchElementException.class, () -> nextVarg(vaList, next));
+    }
+
 }
